[package]
name = "assert-graph-iso"
version = "0.1.0"
authors = ["Martin Junghanns <nerdfaktor@mailbox.org>", "Paul Horn <developer@knutwalker.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdl = {version = "0.2.3", optional = true}

[dev-dependencies]
trim-margin = "0.1.0"
